--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ extra_configs =
 	targets/frsky_tx.ini
 	targets/fusion.ini
 	targets/betafpv_tx.ini
+	targets/diy_tx.ini
 	targets/dupletx_tx.ini
 	targets/radiomaster_tx.ini
 	targets/hdzero.ini
