--- a/targets/diy_tx.ini
+++ b/targets/diy_tx.ini
@@ -8,6 +8,7 @@ build_flags =
 	-D PIN_LED=27
 	-D OLED
 	-D RELAY
+	-D DEBUG_LOG
 
 lib_ignore = STM32UPDATE
 lib_deps = 
@@ -17,18 +18,38 @@ lib_deps =
 [env:DIY_TX_ESP32_Backpack_via_WIFI]
 extends = env:DIY_TX_ESP32_Backpack_via_UART
 
+[env:DIY_RXTLM_ESP32_Backpack_via_UART]
+extends = env_common_esp32
+monitor_speed = 460800
+build_flags =
+	${common_env_data.build_flags}
+	${env_common_esp32.build_flags}	
+	-D TARGET_VRX_BACKPACK
+	-D PIN_BUTTON=13
+	-D PIN_LED=27
+ 	-D OLED
+	-D RELAY
+#	-D DEBUG_LOG
+build_src_filter = ${common_env_data.build_src_filter} -<Tx_main.cpp> -<rapidfire.*> -<rx5808.*> -<steadyview.*> -<fusion.*> -<hdzero.*> -<skyzone_msp.*> -<orqa.*>
+lib_ignore = STM32UPDATE
+lib_deps = 
+    olikraus/U8g2@^2.34.4
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
+
 # ********************************
 # Transmitter backpack targets
 # ********************************
 
 [env:DIY_TX_Backpack_via_UART]
 extends = env_common_esp8285, tx_backpack_common
+monitor_speed = 460800
 build_flags =
 	${env_common_esp8285.build_flags}
 	${tx_backpack_common.build_flags}
 	-D PIN_BUTTON=0
 	-D PIN_LED=16
-
+	-D RELAY
+#	-D DEBUG_LOG
 [env:DIY_TX_Backpack_via_WIFI]
 extends = env:DIY_TX_Backpack_via_UART
 
