update for send LTM by espnow

--- a/targets/diy_tx.ini
+++ b/targets/diy_tx.ini
@@ -29,7 +29,7 @@ build_flags =
 	-D PIN_LED=27
  	-D OLED
 	-D RELAY
-#	-D DEBUG_LOG
+	-D DEBUG_LOG
 build_src_filter = ${common_env_data.build_src_filter} -<Tx_main.cpp> -<rapidfire.*> -<rx5808.*> -<steadyview.*> -<fusion.*> -<hdzero.*> -<skyzone_msp.*> -<orqa.*>
 lib_ignore = STM32UPDATE
 lib_deps = 
