--- a/targets/diy_tx.ini
+++ b/targets/diy_tx.ini
@@ -1,23 +1,3 @@
-[env:DIY_TX_ESP32_Backpack_via_UART]
-extends = env_common_esp32, tx_backpack_common
-monitor_speed = 115200
-build_flags =
-	${env_common_esp32.build_flags}
-	${tx_backpack_common.build_flags}
-	-D PIN_BUTTON=13
-	-D PIN_LED=27
-	-D OLED
-	-D RELAY
-	-D DEBUG_LOG
-
-lib_ignore = STM32UPDATE
-lib_deps = 
-    olikraus/U8g2@^2.34.4
-	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
-
-[env:DIY_TX_ESP32_Backpack_via_WIFI]
-extends = env:DIY_TX_ESP32_Backpack_via_UART
-
 [env:DIY_RXTLM_ESP32_Backpack_via_UART]
 extends = env_common_esp32
 monitor_speed = 460800
@@ -36,6 +16,20 @@ lib_deps =
     olikraus/U8g2@^2.34.4
 	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
 
+[env:DIY_RXTLM_Backpack_via_UART]
+extends = env_common_esp8285
+monitor_speed = 460800
+build_flags =
+	${common_env_data.build_flags}
+	${env_common_esp8285.build_flags}
+	-D TARGET_VRX_BACKPACK
+	-D PIN_BUTTON=13
+	-D PIN_LED=27
+	-D RELAY
+	-D DEBUG_LOG
+build_src_filter = ${common_env_data.build_src_filter} -<Tx_main.cpp> -<rapidfire.*> -<rx5808.*> -<steadyview.*> -<fusion.*> -<hdzero.*> -<skyzone_msp.*> -<orqa.*>
+
+
 # ********************************
 # Transmitter backpack targets
 # ********************************
@@ -53,3 +47,21 @@ build_flags =
 [env:DIY_TX_Backpack_via_WIFI]
 extends = env:DIY_TX_Backpack_via_UART
 
+[env:DIY_TX_ESP32_Backpack_via_UART]
+extends = env_common_esp32, tx_backpack_common
+monitor_speed = 115200
+build_flags =
+	${env_common_esp32.build_flags}
+	${tx_backpack_common.build_flags}
+	-D PIN_BUTTON=13
+	-D PIN_LED=27
+	-D OLED
+	-D RELAY
+	-D DEBUG_LOG
+lib_ignore = STM32UPDATE
+lib_deps = 
+    olikraus/U8g2@^2.34.4
+	ottowinter/ESPAsyncWebServer-esphome @ ^2.0.1
+
+[env:DIY_TX_ESP32_Backpack_via_WIFI]
+extends = env:DIY_TX_ESP32_Backpack_via_UART
