--- a/platformio.ini
+++ b/platformio.ini
@@ -15,10 +15,9 @@ extra_configs =
 	targets/frsky_tx.ini
 	targets/fusion.ini
 	targets/betafpv_tx.ini
-	targets/diy_tx.ini
 	targets/dupletx_tx.ini
 	targets/radiomaster_tx.ini
 	targets/hdzero.ini
 	targets/skyzone.ini
 	targets/orqa.ini
-	targets/diy_tx.ini
+	targets/diy_tlm_tx_rx.ini
