fix gps's lat&lon calc error

--- a/targets/diy_tlm_tx_rx.ini
+++ b/targets/diy_tlm_tx_rx.ini
@@ -5,6 +5,7 @@ build_flags =
 	${common_env_data.build_flags}
 	${env_common_esp32.build_flags}	
 	-D TARGET_VRX_BACKPACK
+	-D TARGET_TLMRX_BACKPACK
 	-D PIN_BUTTON=13
 	-D PIN_LED=27
  	-D OLED
@@ -18,15 +19,16 @@ lib_deps =
 
 [env:DIY_RXTLM_Backpack_via_UART]
 extends = env_common_esp8285
-monitor_speed = 460800
+monitor_speed = 115200
 build_flags =
 	${common_env_data.build_flags}
 	${env_common_esp8285.build_flags}
 	-D TARGET_VRX_BACKPACK
-	-D PIN_BUTTON=13
-	-D PIN_LED=27
+	-D TARGET_TLMRX_BACKPACK
+	-D PIN_BUTTON=0
+	-D PIN_LED=16
 	-D RELAY
-	-D DEBUG_LOG
+#	-D DEBUG_LOG
 build_src_filter = ${common_env_data.build_src_filter} -<Tx_main.cpp> -<rapidfire.*> -<rx5808.*> -<steadyview.*> -<fusion.*> -<hdzero.*> -<skyzone_msp.*> -<orqa.*>
 
 
